kustomize/base/ranger-elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ranger-elastic
  name: ranger-elastic
  namespace: ranger-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ranger-elastic
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/ranger-docker-ranger: "true"
        io.kompose.service: ranger-elastic
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
          container_name: es01
          hostname: es01
          environment:
            discovery.type: single-node
            xpack.security.enabled: "false"
          ports:
            - name: 'elastic'
              containerPort: 9200
              protocol: TCP
          volumes:
          - ranger-es-data:/usr/share/elasticsearch/data
