kustomize/base/ranger-elastic-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ranger-elastic
  name: ranger-elastic
  namespace: ranger-test
spec:
  ports:
    - name: "elastic"
      port: 9200
      protocol: TCP
      targetPort: elastic
  selector:
    io.kompose.service: ranger-elastic
status:
  loadBalancer: {}
