kustomize/base/ranger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranger
  namespace: ranger-test
spec:
  ports:
    - name: "default"
      port: 6080
      protocol: TCP
      targetPort: port
  selector:
    io.kompose.service: ranger
